<resources>
    <string name="app_name">WinlatorXR</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display.</string>
    <string name="no_items_to_display_envvars">No environmental variables activated.</string>
    <string name="no_items_to_display_shortcuts">Create a container, right click an executable, create a shortcut!</string>
    <string name="no_items_to_display_containers">Create a container to get started!</string>
    <string name="no_items_to_display_saves">Register a save file directory from one of your containers to get started!</string>
    <string name="no_items_to_display_input">No external controllers detected.</string>
    <string name="no_items_to_display_taskmgr">No running processes detected!?</string>
    <string name="no_items_to_display_drives">No drives assigned!</string>
    <string name="no_items_to_display_contents">No installed contents to display!</string>
    <string name="no_items_to_display_logs">No logs to display!</string>
    <string name="new_container">New Container</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container…</string>
    <string name="removing_container">Removing Container…</string>
    <string name="duplicating_container">Duplicating Container…</string>
    <string name="installing_system_files">Installing System Files…</string>
    <string name="updating_system_files">Updating System Files…</string>
    <string name="starting_up">Starting up…</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_shortcut">Do you want to remove this shortcut?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this wine version?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="relative_mouse_movement">Relative Mouse Movement</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="profile_exported_to">Profile exported to</string>
    <string name="unable_to_import_profile">Unable to import profile</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="registry_keys">Registry Keys</string>
    <string name="csmt">CSMT (Command Stream Multi-Thread)</string>
    <string name="gpu_name">GPU Name</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="strict_shader_math">Strict Shader Math</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="show_fps">Show FPS</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="import_profile">Import Profile</string>
    <string name="export_profile">Export Profile</string>
    <string name="touchpad_help">Touchpad Help</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="duplicate">Duplicate</string>
    <string name="about">About</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="external_controllers">External Controllers</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="loading">Loading…</string>
    <string name="press_any_button_on_your_controller">Press any button on your controller</string>
    <string name="bindings">bindings</string>
    <string name="show_touchscreen_controls">Show Touchscreen Controls</string>
    <string name="dxwrapper">DX Wrapper</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="direct3d">Direct3D</string>
    <string name="directsound">DirectSound</string>
    <string name="directmusic">DirectMusic</string>
    <string name="directplay">DirectPlay</string>
    <string name="directshow">DirectShow</string>
    <string name="directx">DirectX</string>
    <string name="xaudio">XAudio</string>
    <string name="vcrun2010">Visual C++ 2010</string>
    <string name="windowsmediafoundation">Windows Media Foundation</string>
    <string name="opengl">OpenGL</string>
    <string name="settings">Settings</string>
    <string name="exec_arguments">Exec Arguments</string>
    <string name="win_components">Win Components</string>
    <string name="drives">Drives</string>
    <string name="force_fullscreen">Force Fullscreen for Windowed Apps</string>
    <string name="range">Range</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="force">Force</string>
    <string name="installed_wine">Installed Wine</string>
    <string name="install_wine">Install Wine</string>
    <string name="arch">Arch</string>
    <string name="version">Version</string>
    <string name="unable_to_install_wine">Unable to install Wine</string>
    <string name="unable_to_remove_this_wine_version">Unable to remove this wine version</string>
    <string name="wine_version">Wine Version</string>
    <string name="removing_wine">Removing Wine…</string>
    <string name="preparing_installation">Preparing installation…</string>
    <string name="finishing_installation">Finishing installation…</string>
    <string name="storage_info">Storage Info</string>
    <string name="drive_c">Drive C:</string>
    <string name="cache">Cache</string>
    <string name="total">Total</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="estimated_used_space">Estimated Used Space</string>
    <string name="advanced">Advanced</string>
    <string name="box86_box64">Box86/Box64</string>
    <string name="system">System</string>
    <string name="box86_preset">Box86 Preset</string>
    <string name="box64_preset">Box64 Preset</string>
    <string name="box86_version">Box86 Version</string>
    <string name="box64_version">Box64 Version</string>
    <string name="letter">Letter</string>
    <string name="task_manager">Task Manager</string>
    <string name="magnifier">Magnifier</string>
    <string name="logs">Logs</string>
    <string name="export">Export</string>
    <string name="graphics_driver_version">Graphics Driver Version</string>
    <string name="graphics_driver_available_extensions">Available Extensions</string>
    <string name="transfer">Transfer</string>
    <string name="share">Share</string>
    <string name="unregister">Unregister</string>
    <string name="save_path">Save Path</string>
    <string name="save_title">Save Name</string>
    <string name="select_save_path">Locate Save Folder</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="screen_effect">Screen Effects</string>
    <string name="graphics_driver_max_device_memory">Max Device Memory</string>
    <string name="gyro_activator_button">Gyroscope Activation Button</string>
    <string name="hold">Hold</string>
    <string name="toggle">Toggle</string>
    <string name="x_sensitivity">X-Axis Sensitivity</string>
    <string name="y_sensitivity">Y-Axis Sensitivity</string>
    <string name="smoothing">Smoothing</string>
    <string name="invert_x">Invert X-Axis</string>
    <string name="invert_y">Invert Y-Axis</string>
    <string name="filtering">Filtering</string>
    <string name="gyro_deadzone">Deadzone</string>
    <string name="gyro_sensitivity">Sensitivity</string>
    <string name="direction">Direction</string>
    <string name="gyro_mode">Gyroscope Activation Mode</string>
    <string name="motion_controls">Motion Controls</string>
    <string name="debug_terminal">Debug Terminal</string>
    <string name="pause_resume">Pause / Resume</string>
    <string name="menu_section_system">System</string>
    <string name="menu_section_display">Display</string>
    <string name="menu_section_input">Input</string>
    <string name="macros_hint">Toggle buttons to enable autofire.</string>
    <string name="include_triggers_note">Also apply turbo to L2/R2 as digital presses</string>
    <string name="enable_all">Enable all</string>
    <string name="disable_all">Disable all</string>
    <string name="controller_manager">Controller Manager</string>
    <string name="gyro_target_stick">Apply gyro to</string>
    <string name="right_stick">Right stick</string>
    <string name="left_stick">Left stick</string>
    <string name="enable_stick_gyro">Enable Analog Stick Gyroscopic Motion</string>
</resources>