<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ===== Top-level quick actions ===== -->
    <item
        android:id="@+id/main_menu_relative_mouse"
        android:title="@string/relative_mouse_movement"
        android:icon="@drawable/icon_mouse"
        android:checkable="true" />

    <item
        android:id="@+id/main_menu_keyboard"
        android:title="@string/keyboard"
        android:icon="@drawable/icon_keyboard" />

    <!-- ===== INPUT ===== -->
    <item
        android:id="@+id/header_input"
        android:title="@string/menu_section_input"
        android:icon="@drawable/icon_input_header" />
    <group
        android:id="@+id/group_input"
        android:checkableBehavior="none">
        <item
            android:id="@+id/main_menu_input_controls"
            android:title="@string/input_controls"
            android:icon="@drawable/icon_input_controls" />
        <item
            android:id="@+id/main_menu_controller_assignment"
            android:title="@string/controller_manager"
            android:icon="@drawable/icon_gamepad" />
        <item
            android:id="@+id/main_menu_motion_controls"
            android:title="@string/motion_controls"
            android:icon="@drawable/icon_motion_controls" />
    </group>

    <!-- ===== DISPLAY ===== -->
    <item
        android:id="@+id/header_display"
        android:title="@string/menu_section_display"
        android:icon="@drawable/ic_big_picture_mode" />
    <group
        android:id="@+id/group_display"
        android:checkableBehavior="none">
        <item
            android:id="@+id/main_menu_screen_effects"
            android:title="@string/screen_effect"
            android:icon="@drawable/icon_screen_effect" />
        <item
            android:id="@+id/main_menu_toggle_fullscreen"
            android:title="@string/toggle_fullscreen"
            android:icon="@drawable/icon_fullscreen" />
        <item
            android:id="@+id/main_menu_magnifier"
            android:title="@string/magnifier"
            android:icon="@drawable/icon_magnifier" />
        <item
            android:id="@+id/main_menu_pip_mode"
            android:title="@string/pip_mode"
            android:icon="@drawable/ic_picture_in_picture_alt" />
    </group>

    <!-- ===== SYSTEM ===== -->
    <item
        android:id="@+id/header_system"
        android:title="@string/menu_section_system"
        android:icon="@drawable/icon_settings" />
    <group
        android:id="@+id/group_system"
        android:checkableBehavior="none">
        <item
            android:id="@+id/main_menu_task_manager"
            android:title="@string/task_manager"
            android:icon="@drawable/icon_task_manager" />
        <item
            android:id="@+id/main_menu_terminal"
            android:title="@string/debug_terminal"
            android:icon="@drawable/icon_env_var" />
    </group>

    <!-- ===== More quick actions at bottom ===== -->
    <item
        android:id="@+id/main_menu_pause"
        android:title="@string/pause_resume"
        android:icon="@drawable/icon_pause" />

    <item
        android:id="@+id/main_menu_logs"
        android:title="@string/logs"
        android:icon="@drawable/icon_debug" />

    <item
        android:id="@+id/main_menu_touchpad_help"
        android:title="@string/touchpad_help"
        android:icon="@drawable/icon_help" />

    <item
        android:id="@+id/main_menu_exit"
        android:title="@string/exit"
        android:icon="@drawable/icon_exit" />
</menu>
